--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,51 +1,77 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Add a Contribution Points display to the user profile page (React UI), sourced from existing client state with responsive styling and live updates.",
+  "summary": "Build an admin UI to inspect contribution logs, including secure admin-only access, filtering, pagination, and links to related entities.",
   "architectural_notes": [
-    "Contribution Points total should be read from existing React client state (no new backend calls).",
-    "Contribution Points display should update immediately after the relevant toast event triggers."
+    "Use existing admin-only API endpoint to fetch contribution logs for the admin UI.",
+    "Admin UI should restrict access to admins only (route/page guard).",
+    "Contribution logs list should support filtering (action type/date) and pagination to avoid loading all entries at once.",
+    "Each log entry should link to the related issue/comment/evidence entity."
   ],
   "known_issues": [],
   "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-add-a-clearly-visible-contribution-points-summary-element-to-the-user-profile-page-that-prominently-shows-the-user-s-total-contribution-points-styled-consistently-with-the-existing-profile-layout-and-using-a-teal-accent",
-      "title": "Add a clearly visible Contribution Points summary element to the user Profile page that prominently shows the user’s total contribution points, styled consistently with the existing Profile layout and using a teal accent.",
+      "id": "feature-add-a-dedicated-admin-page-section-labeled-contribution-logs-that-is-visible-within-the-admin-area-and-uses-english-user-facing-text",
+      "title": "Add a dedicated Admin page section labeled \"Contribution Logs\" that is visible within the Admin area and uses English user-facing text.",
       "reqIds": [
         "REQ-1"
       ],
       "version": 1
     },
     {
-      "id": "feature-source-the-displayed-contribution-points-total-strictly-from-existing-client-side-react-state-react-query-cache-already-used-by-the-profile-page-and-do-not-add-any-new-backend-calls-endpoints-for-this-display",
-      "title": "Source the displayed contribution points total strictly from existing client-side React state/React Query cache already used by the Profile page, and do not add any new backend calls/endpoints for this display.",
+      "id": "feature-fetch-contribution-logs-using-the-existing-admin-only-backend-api-endpoints-and-display-them-without-loading-all-entries-at-once",
+      "title": "Fetch contribution logs using the existing admin-only backend API endpoints and display them without loading all entries at once.",
       "reqIds": [
         "REQ-2"
       ],
       "version": 1
     },
     {
-      "id": "feature-add-a-short-english-helper-hint-under-near-the-contribution-points-total-explaining-what-contribution-points-represent-and-add-an-english-fallback-message-for-users-with-zero-total-points",
-      "title": "Add a short English helper hint under/near the Contribution Points total explaining what contribution points represent, and add an English fallback message for users with zero total points.",
+      "id": "feature-render-contribution-log-entries-in-a-simple-scannable-list-format-that-includes-user-principal-action-type-points-and-timestamp",
+      "title": "Render contribution log entries in a simple, scannable list format that includes: user (principal), action type, points, and timestamp.",
       "reqIds": [
         "REQ-3"
       ],
       "version": 1
     },
     {
-      "id": "feature-ensure-the-contribution-points-total-updates-immediately-in-the-profile-page-ui-after-an-earned-points-toast-event-without-requiring-a-backend-refetch-to-see-the-updated-number",
-      "title": "Ensure the Contribution Points total updates immediately in the Profile page UI after an earned-points toast event, without requiring a backend refetch to see the updated number.",
+      "id": "feature-add-filters-to-the-contribution-logs-section-for-a-action-type-and-b-date-range-or-from-to-and-apply-them-to-the-displayed-entries",
+      "title": "Add filters to the Contribution Logs section for (a) action type and (b) date (range or from/to), and apply them to the displayed entries.",
       "reqIds": [
         "REQ-4"
       ],
       "version": 1
     },
     {
-      "id": "feature-verify-and-adjust-the-contribution-points-ui-element-to-be-mobile-responsive-readable-layout-no-overflow-appropriate-spacing-across-small-screens",
-      "title": "Verify and adjust the Contribution Points UI element to be mobile responsive (readable layout, no overflow, appropriate spacing) across small screens.",
+      "id": "feature-add-pagination-controls-for-the-contribution-logs-view-s-so-admins-can-navigate-through-multiple-pages-of-results-and-clearly-indicate-what-range-page-is-currently-shown",
+      "title": "Add pagination controls for the contribution logs view(s) so admins can navigate through multiple pages of results, and clearly indicate what range/page is currently shown.",
       "reqIds": [
         "REQ-5"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-link-each-log-entry-to-its-related-issue-comment-evidence-item-when-a-reference-identifier-is-present-and-handle-unknown-unlinkable-references-gracefully",
+      "title": "Link each log entry to its related issue/comment/evidence item when a reference identifier is present, and handle unknown/unlinkable references gracefully.",
+      "reqIds": [
+        "REQ-6"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-ensure-only-administrators-can-access-the-contribution-logs-section-page-by-enforcing-admin-gating-in-the-ui-and-preventing-non-admin-users-from-viewing-log-data",
+      "title": "Ensure only administrators can access the Contribution Logs section/page by enforcing admin gating in the UI and preventing non-admin users from viewing log data.",
+      "reqIds": [
+        "REQ-7"
+      ],
+      "version": 1
+    },
+    {
+      "id": "feature-ensure-the-contribution-logs-ui-is-mobile-responsive-and-matches-the-existing-admin-styling-conventions-cards-spacing-typography-and-states-for-loading-error-empty",
+      "title": "Ensure the Contribution Logs UI is mobile responsive and matches the existing admin styling conventions (cards, spacing, typography, and states for loading/error/empty).",
+      "reqIds": [
+        "REQ-8"
       ],
       "version": 1
     }
@@ -53,12 +79,12 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Add Contribution Points display on profile page (UI element, uses existing React state, teal styling, hint text, live update after toast, zero fallback, mobile responsive).",
+      "summary": "Add admin UI section “Contribution Logs” that fetches logs from existing admin-only endpoint and displays a list with filters (action type/date), pagination, links to related items, admin-only access control, and responsive styling.",
       "reqIds": [],
       "status": "in_progress"
     }
   ],
-  "projectName": "Step 6: Display Contribution Points on Profile page (state-sourced, teal styling, instant updates)",
+  "projectName": "Step 7: Admin UI for inspecting contribution logs (filters, pagination, links, admin-only access)",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
