--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,77 +1,34 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Build an admin UI to inspect contribution logs, including secure admin-only access, filtering, pagination, and links to related entities.",
+  "summary": "Implement Phase 3 WSP Economic Layer (Soft Launch): introduce WSP ICRC-1 tokenization of contribution points with mint/burn logic, UI profile staking fields, governance stubs, balances UI, and admin-only token controls (test mode).",
   "architectural_notes": [
-    "Use existing admin-only API endpoint to fetch contribution logs for the admin UI.",
-    "Admin UI should restrict access to admins only (route/page guard).",
-    "Contribution logs list should support filtering (action type/date) and pagination to avoid loading all entries at once.",
-    "Each log entry should link to the related issue/comment/evidence entity."
+    "Phase 3 uses a placeholder ICRC-1 ledger implementation inside the application/canister; real on-chain WSP deployment can be activated later."
   ],
   "known_issues": [],
   "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-add-a-dedicated-admin-page-section-labeled-contribution-logs-that-is-visible-within-the-admin-area-and-uses-english-user-facing-text",
-      "title": "Add a dedicated Admin page section labeled \"Contribution Logs\" that is visible within the Admin area and uses English user-facing text.",
-      "reqIds": [
-        "REQ-1"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-fetch-contribution-logs-using-the-existing-admin-only-backend-api-endpoints-and-display-them-without-loading-all-entries-at-once",
-      "title": "Fetch contribution logs using the existing admin-only backend API endpoints and display them without loading all entries at once.",
-      "reqIds": [
-        "REQ-2"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-render-contribution-log-entries-in-a-simple-scannable-list-format-that-includes-user-principal-action-type-points-and-timestamp",
-      "title": "Render contribution log entries in a simple, scannable list format that includes: user (principal), action type, points, and timestamp.",
-      "reqIds": [
-        "REQ-3"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-add-filters-to-the-contribution-logs-section-for-a-action-type-and-b-date-range-or-from-to-and-apply-them-to-the-displayed-entries",
-      "title": "Add filters to the Contribution Logs section for (a) action type and (b) date (range or from/to), and apply them to the displayed entries.",
-      "reqIds": [
-        "REQ-4"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-add-pagination-controls-for-the-contribution-logs-view-s-so-admins-can-navigate-through-multiple-pages-of-results-and-clearly-indicate-what-range-page-is-currently-shown",
-      "title": "Add pagination controls for the contribution logs view(s) so admins can navigate through multiple pages of results, and clearly indicate what range/page is currently shown.",
+      "id": "feature-update-the-profile-page-ui-to-show-basic-wsp-token-balance-sourced-from-the-backend-ledger-and-display-it-alongside-existing-contribution-points",
+      "title": "Update the Profile page UI to show basic WSP token balance sourced from the backend ledger, and display it alongside existing contribution points.",
       "reqIds": [
         "REQ-5"
       ],
       "version": 1
     },
     {
-      "id": "feature-link-each-log-entry-to-its-related-issue-comment-evidence-item-when-a-reference-identifier-is-present-and-handle-unknown-unlinkable-references-gracefully",
-      "title": "Link each log entry to its related issue/comment/evidence item when a reference identifier is present, and handle unknown/unlinkable references gracefully.",
+      "id": "feature-add-staking-fields-to-user-profiles-on-the-frontend-only-no-backend-persistence-required-including-inputs-and-basic-client-side-validation",
+      "title": "Add staking fields to user profiles on the frontend only (no backend persistence required), including inputs and basic client-side validation.",
       "reqIds": [
         "REQ-6"
       ],
       "version": 1
     },
     {
-      "id": "feature-ensure-only-administrators-can-access-the-contribution-logs-section-page-by-enforcing-admin-gating-in-the-ui-and-preventing-non-admin-users-from-viewing-log-data",
-      "title": "Ensure only administrators can access the Contribution Logs section/page by enforcing admin gating in the UI and preventing non-admin users from viewing log data.",
+      "id": "feature-add-admin-only-token-operations-controls-test-mode-to-the-existing-admin-area-ui-including-the-ability-to-mint-and-burn-wsp-for-a-specified-principal-backed-by-admin-gated-backend-methods",
+      "title": "Add admin-only token operations controls (test mode) to the existing Admin area UI, including the ability to mint and burn WSP for a specified principal, backed by admin-gated backend methods.",
       "reqIds": [
         "REQ-7"
-      ],
-      "version": 1
-    },
-    {
-      "id": "feature-ensure-the-contribution-logs-ui-is-mobile-responsive-and-matches-the-existing-admin-styling-conventions-cards-spacing-typography-and-states-for-loading-error-empty",
-      "title": "Ensure the Contribution Logs UI is mobile responsive and matches the existing admin styling conventions (cards, spacing, typography, and states for loading/error/empty).",
-      "reqIds": [
-        "REQ-8"
       ],
       "version": 1
     }
@@ -79,12 +36,80 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Add admin UI section “Contribution Logs” that fetches logs from existing admin-only endpoint and displays a list with filters (action type/date), pagination, links to related items, admin-only access control, and responsive styling.",
+      "summary": "Convert contribution points into an ICRC-1 token (WSP)",
       "reqIds": [],
-      "status": "in_progress"
+      "status": "pending"
+    },
+    {
+      "id": "AR-2",
+      "summary": "Add mint logic for valid contribution events (WSP)",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-3",
+      "summary": "Add burn logic for slashing/invalidated events (WSP)",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-4",
+      "summary": "Add staking fields to user profiles (front-end only)",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-5",
+      "summary": "Add governance stubs for future DAO proposals",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-6",
+      "summary": "Add basic on-chain token balances to profile UI",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-7",
+      "summary": "Add admin-only controls for token operations (test mode)",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-8",
+      "summary": "Implement an embedded ICRC-1-style token ledger for WSP inside the existing backend single actor, including persistent balances, total supply, and the core public query/update methods needed to read balances and perform transfers.",
+      "reqIds": [
+        "REQ-1"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-9",
+      "summary": "Add minting logic that mints WSP for valid contribution events, ensuring minting is idempotent with existing duplicate-prevention for contribution events.",
+      "reqIds": [
+        "REQ-2"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-10",
+      "summary": "Add burn logic to support slashing/invalidated contribution events, including a backend pathway to mark events invalidated and burn the corresponding WSP from the contributor when applicable.",
+      "reqIds": [
+        "REQ-3"
+      ],
+      "status": "pending"
+    },
+    {
+      "id": "AR-11",
+      "summary": "Add governance stubs in the backend for future DAO proposals, including types and placeholder methods that compile and can be safely called but clearly indicate \"not implemented\" behavior.",
+      "reqIds": [
+        "REQ-4"
+      ],
+      "status": "pending"
     }
   ],
-  "projectName": "Step 7: Admin UI for inspecting contribution logs (filters, pagination, links, admin-only access)",
+  "projectName": "Phase 3: Add WSP ICRC-1 token accounting, mint/burn, staking UI fields, governance stubs, balances UI, and admin token controls",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
