--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,30 +1,43 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "New project",
+  "summary": "Project now includes staking functionality work: adding a basic getStakingInfo method and a read-only frontend staking UI.",
   "architectural_notes": [],
   "known_issues": [],
   "isFixRequest": false,
-  "existing_features": [],
+  "existing_features": [
+    {
+      "id": "feature-implement-a-read-only-staking-ui-in-the-profile-page-that-fetches-staking-info-from-the-backend-using-getstakinginfo-and-displays-total-staked-available-balance-locked-balance-and-pending-rewards-with-loading-and-empty-states",
+      "title": "Implement a read-only staking UI in the Profile page that fetches staking info from the backend using getStakingInfo and displays Total Staked, Available Balance, Locked Balance, and Pending Rewards, with loading and empty states.",
+      "reqIds": [
+        "REQ-2"
+      ],
+      "version": 1
+    }
+  ],
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Add read-only backend query methods for staking records without changing existing user profile APIs: (1) a query that returns the caller’s staking record (returning null/empty/default when unset) and is gated by the existing #user permission check; (2) a query that returns a staking record for an arbitrary Principal, allowed only when the caller is that Principal or the caller is an admin, otherwise trap with an Unauthorized error message in English.",
-      "reqIds": [
-        "REQ-1"
-      ],
+      "summary": "Add a basic getStakingInfo method",
+      "reqIds": [],
       "status": "pending"
     },
     {
       "id": "AR-2",
-      "summary": "Ensure canister upgrades remain safe after adding staking state by updating the existing upgrade persistence mechanism (preupgrade/postupgrade and/or backend/migration.mo per the current codebase pattern) so staking records are persisted and restored correctly, and older deployments can upgrade with staking state initialized to empty/defaults.",
+      "summary": "Add frontend staking UI (read-only)",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-3",
+      "summary": "Add a basic backend query method named getStakingInfo that returns the caller’s staking information using the existing StakingRecord type and stakingRecords storage.",
       "reqIds": [
-        "REQ-2"
+        "REQ-1"
       ],
       "status": "pending"
     }
   ],
-  "projectName": "Phase 4 Staking: Add read-only staking queries and upgrade-safe persistence",
+  "projectName": "Add backend getStakingInfo query and read-only staking UI",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
