Finalize generated project artifacts; no code changes
# Motivation
Code generation and build steps completed successfully (generated application source files and technical specs). This commit records that the automated generation finished and keeps the repository in a stable state while we prepare to wire the new slot‑filling into the upcoming WSP token flow next.

# Changes
No changes planned. Spec.md indicates no modifications to the codebase at this time.

Co-authored-by: Caffeine <forge@caffeine.ai>

--- a/src/project_state.json
+++ b/src/project_state.json
@@ -1,38 +1,46 @@
 {
   "schemaVersion": "1.0.0",
   "projectStateVersion": 3,
-  "summary": "Project to implement governance proposals: connect proposals to backend, add staking/governance UI, and expand Secretary routing to proposals.",
-  "architectural_notes": [],
-  "known_issues": [],
+  "summary": "Whisper civic platform with an existing “Secretary” chat popup that should remain normal-sized (not full screen). Planned: automatic slot-filling and multi-step conversational flows for issue reporting with geography-aware suggestions (city/county/state), cross-referencing a locations database and a “50 most common issues” database, plus auto-creation of missing Whisper instances using a naming convention (e.g., WhisperOmaha-NE). Also planned: adding a WSP (Whisper Coin) token on ICP via a separate ICRC-1 ledger canister and integrating read-only balance display, with later phases for minting/rewards, staking, and governance.",
+  "architectural_notes": [
+    "Secretary refers to the existing chat popup UI; it should not become full-screen.",
+    "Slot-filling and multi-step flows should trigger automatically for all user messages (not only via button/keyword).",
+    "Geography handling should use fuzzy matching against a city/county/state database, then ask whether the issue is city/county/state.",
+    "If a referenced city/county/state instance does not exist, prompt founding-member flow and auto-create required instances using naming like \"WhisperOmaha-NE\".",
+    "WSP token must be deployed as a separate ICRC-1 ledger canister (not embedded in the main Whisper canister); Whisper stores the ledger canister ID for integration."
+  ],
+  "known_issues": [
+    "Caffeine/AI build execution intermittently fails or returns 'couldn't implement' during token/flow implementation attempts; may require smaller, more specific build steps."
+  ],
   "isFixRequest": false,
   "existing_features": [
     {
-      "id": "feature-connect-the-existing-proposals-list-detail-ui-to-real-backend-data-by-implementing-and-wiring-backend-query-update-methods-for-proposals-list-proposals-fetch-a-proposal-by-identifier-and-any-required-proposal-lifecycle-updates-used-by-the-ui-ensure-the-frontend-react-query-hooks-used-by-proposalssection-and-proposaldetaildialog-use-these-backend-methods-no-placeholder-stub-data-and-preserve-current-loading-empty-error-states",
-      "title": "Connect the existing Proposals list/detail UI to real backend data by implementing and wiring backend query/update methods for proposals (list proposals, fetch a proposal by identifier, and any required proposal lifecycle updates used by the UI). Ensure the frontend React Query hooks used by `ProposalsSection` and `ProposalDetailDialog` use these backend methods (no placeholder/stub data) and preserve current loading/empty/error states.",
+      "id": "feature-enable-the-secretary-s-intent-slot-filling-mode-to-automatically-pre-fill-slots-from-a-single-user-message-at-minimum-geography-slots-and-for-the-report-issue-intent-the-initial-issue-description-and-then-ask-only-for-the-remaining-missing-required-slots",
+      "title": "Enable the Secretary’s intent/slot-filling mode to automatically pre-fill slots from a single user message (at minimum: geography slots and, for the report-issue intent, the initial issue description) and then ask only for the remaining missing required slots.",
       "reqIds": [
         "REQ-1"
       ],
       "version": 1
     },
     {
-      "id": "feature-implement-staking-backend-support-and-connect-it-to-the-existing-staking-ui-and-hooks-add-canister-methods-required-by-the-current-frontend-contract-at-minimum-getstakinginfo-stake-amount-and-unstake-amount-update-token-staking-state-consistently-and-replace-the-placeholder-errors-in-usestake-useunstake-so-the-profile-staking-section-can-successfully-stake-and-unstake",
-      "title": "Implement staking backend support and connect it to the existing staking UI and hooks. Add canister methods required by the current frontend contract (at minimum: `getStakingInfo`, `stake(amount)`, and `unstake(amount)`), update token/staking state consistently, and replace the placeholder errors in `useStake`/`useUnstake` so the Profile staking section can successfully stake and unstake.",
+      "id": "feature-wire-complaint-category-suggestions-into-slot-filling-when-the-next-missing-slot-is-issue-category-fetch-and-present-category-suggestions-based-on-the-currently-filled-geography-level-and-the-current-issue-description-slot-and-allow-the-user-to-choose-a-suggestion-to-fill-the-category-slot",
+      "title": "Wire complaint category suggestions into slot-filling: when the next missing slot is issue_category, fetch and present category suggestions based on the currently filled geography level and the current issue_description slot, and allow the user to choose a suggestion to fill the category slot.",
       "reqIds": [
         "REQ-2"
       ],
       "version": 1
     },
     {
-      "id": "feature-add-a-governance-ui-for-governance-proposals-create-list-view-details-and-vote-and-implement-the-corresponding-backend-methods-for-governance-proposals-and-voting-the-governance-ui-should-be-accessible-from-an-appropriate-existing-navigation-entry-point-e-g-profile-page-section-and-or-a-dedicated-route-and-must-use-authenticated-canister-calls-reuse-existing-design-system-components-and-patterns-cards-dialogs-badges-loading-states",
-      "title": "Add a governance UI for Governance Proposals (create, list, view details, and vote) and implement the corresponding backend methods for governance proposals and voting. The governance UI should be accessible from an appropriate existing navigation entry point (e.g., Profile page section and/or a dedicated route) and must use authenticated canister calls. Reuse existing design system components and patterns (cards, dialogs, badges, loading states).",
+      "id": "feature-fix-secretary-location-typeahead-selection-so-it-works-for-any-active-geography-slot-state-county-or-place-and-correctly-advances-slot-filling-after-selection",
+      "title": "Fix Secretary location typeahead selection so it works for any active geography slot (state, county, or place) and correctly advances slot-filling after selection.",
       "reqIds": [
         "REQ-3"
       ],
       "version": 1
     },
     {
-      "id": "feature-expand-the-secretary-routing-navigation-system-so-the-secretary-can-route-users-to-the-proposals-area-and-also-deep-link-open-a-specific-proposal-when-the-secretary-navigation-payload-includes-a-proposal-identifier-name-ensure-the-registry-keywords-and-deep-link-parsing-support-proposal-destinations-and-that-the-proposals-ui-responds-by-opening-the-correct-proposal-detail-dialog",
-      "title": "Expand the Secretary routing/navigation system so the Secretary can route users to the Proposals area and also deep-link/open a specific proposal when the Secretary navigation payload includes a proposal identifier/name. Ensure the registry keywords and deep-link parsing support proposal destinations and that the Proposals UI responds by opening the correct proposal detail dialog.",
+      "id": "feature-ensure-slot-filling-completion-behavior-is-user-visible-and-consistent-after-all-required-slots-for-an-intent-are-filled-the-secretary-executes-the-existing-completion-navigation-for-that-intent-and-then-resets-back-to-the-main-menu-with-an-english-confirmation-message",
+      "title": "Ensure slot-filling completion behavior is user-visible and consistent: after all required slots for an intent are filled, the Secretary executes the existing completion navigation for that intent and then resets back to the main menu with an English confirmation message.",
       "reqIds": [
         "REQ-4"
       ],
@@ -42,24 +50,43 @@
   "new_feature_requests": [
     {
       "id": "AR-1",
-      "summary": "Connect proposals flow to backend (Run Connect proposals to backend).",
+      "summary": "Implement automatic slot-filling in the existing Secretary chat popup to gather missing details from user messages",
       "reqIds": [],
       "status": "pending"
     },
     {
       "id": "AR-2",
-      "summary": "Add staking and governance UI.",
+      "summary": "Implement multi-step conversational flows in the Secretary (issue reporting, instance creation, category routing, guidance, etc.)",
       "reqIds": [],
       "status": "pending"
     },
     {
       "id": "AR-3",
-      "summary": "Expand Secretary routing to handle proposals.",
+      "summary": "Keep the Secretary chat popup in normal sizing (not full screen)",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-4",
+      "summary": "Add geography-aware autosuggest and clarification (city/county/state) using a location database; cross-reference existing instances and allow founding-member auto-creation of missing instances",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-5",
+      "summary": "Integrate a '50 most common issues' database to suggest categories during reporting flows",
+      "reqIds": [],
+      "status": "pending"
+    },
+    {
+      "id": "AR-6",
+      "summary": "Create WSP (Whisper Coin) on ICP as a dedicated ICRC-1 ledger canister and integrate Whisper to read/display balances (later phases: minting rewards, staking, governance/SNS)",
       "reqIds": [],
       "status": "pending"
     }
   ],
-  "projectName": "Connect proposals to backend, add staking & governance UI, and expand Secretary routing to proposals",
+  "gameProjectType": "none",
+  "projectName": "Whisper",
   "clarification_mode": "instant",
   "clarification_rounds": 0
 }
